applications/omni/omni-manager-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni-manager-website-service
  namespace: omni-manager-website
spec:
  ports:
    - name: http-port-1
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: http-port-2
      protocol: TCP
      port: 8888
      targetPort: 8888
  selector:
    app: omni-manager-website
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: omni-manager-backend
  namespace: omni-manager-website
spec:
  externalName: omni-manager-backend-service.omni-manager-backend.svc.cluster.local
  type: ExternalName
