applications/omni/omni-manager-website/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx   
  name: omni-manager-website-ingress
  namespace: omni-manager-website
spec:
  tls:
    - hosts:
        - omni.openeuler.sh
      secretName: omni-manager-website-tls
  rules:
    - host: omni.openeuler.sh
      http:
        paths:
          - backend:
              serviceName: omni-manager-backend
              servicePort: 8080
            path: /api
          - backend:
              serviceName: omni-manager-website-service
              servicePort: 80
            path: /
